test/tests/integration/fixtures/tags/import/syntax_error/test.js
const TwingTestIntegrationTestCaseBase = require('../../../../../../integration-test-case');

module.exports = class extends TwingTestIntegrationTestCaseBase {
    getDescription() {
        return '"import" tag with syntax error';
    }

    getTemplates() {
        let templates = super.getTemplates();

        templates.set('index.twig', require('./index.twig'));

        return templates;
    }

    getExpectedErrorMessage() {
        return 'TwingErrorSyntax: Unexpected token "end of statement block" of value "%}\n" ("name" expected with value "as") in "index.twig" at line 2.';
    }
};
